<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_300"
    android:gravity="center">
    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvBaslik"
        android:layout_centerHorizontal="true"
        android:text="@string/yemek_item_1"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:id="@+id/viewTop"
        android:layout_below="@+id/tvBaslik"
        android:background="@color/md_grey_600"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/tvTarih"
        android:layout_centerHorizontal="true"
        android:text="@string/yemek_item_empty"
        android:textStyle="bold"
        android:layout_below="@+id/viewTop"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:id="@+id/viewBottom"
        android:layout_below="@+id/tvTarih"
        android:background="@color/md_grey_600"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/tvCorba"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/yemek_item_empty"
        android:layout_below="@+id/viewBottom"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/tvAnayemek"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/yemek_item_empty"
        android:layout_below="@+id/tvCorba"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/tvYardimci"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/yemek_item_empty"
        android:layout_below="@+id/tvAnayemek"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:id="@+id/tvTatli"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/yemek_item_empty"
        android:layout_below="@+id/tvYardimci"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:id="@+id/viewTop1"
        android:layout_below="@+id/tvTatli"
        android:background="@color/md_grey_600"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/tvDesc"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/yemek_item_2"
        android:textStyle="bold"
        android:layout_below="@+id/viewTop1"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:id="@+id/viewBottom1"
        android:layout_below="@+id/tvDesc"
        android:background="@color/md_grey_600"/>

</RelativeLayout>